# carla_infrastructure

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: global_params.yaml  infrastructure_params.yaml
include/carla_infrastructure/: image_transport_node.hpp
infrastructure_carla/: carla_traffic_manager.py  infrastructure_ros_bridge.py  infrastructure_world.py  utils.py
infrastructure_carla/localization/: geo_converter.py  transform.py
infrastructure_carla/sensor/: gnss_sensor.py  imu_sensor.py  lidar_sensor.py  radar_sensor.py  rgb_camera_sensor.py  semantic_camera_sensor.py  semantic_lidar_sensor.py
launch/: carla_infrastructure.launch.py  infrastructure.launch.py
msg/: BoundingBox3D.msg  ClassType.msg  Detection.msg  Perception.msg
rviz/: carla_infrastructure.rviz
scripts/: camera_pose.py  infrastructure_node.py
src/: image_transport_node.cpp
